--- a/package.json
+++ b/package.json
@@ -24,15 +24,20 @@
     "@apollo/server": "^4.10.5",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^11.0.20",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.20",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^11.0.20",
     "@nestjs/throttler": "^6.4.0",
     "bookvault-graphql": "file:",
+    "cookie-parser": "^1.4.7",
+    "csrf-csrf": "^3.1.0",
+    "dotenv": "^16.5.0",
     "graphql": "^16.9.0",
     "helmet": "^8.1.0",
     "install": "^0.13.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.1",
     "nest-graphql": "file:",
     "npm": "^11.3.0",
